# Rend

./: .gitignore  CMakeLists.txt  LICENSE  MakeRelease.bat  Readme.md  bug.txt  changelog.txt
src/benchmark/: CMakeLists.txt
src/benchmark/include/: RootDir.hpp.in
src/benchmark/src/: Main.cpp
src/lib-app/: CMakeLists.txt
src/lib-app/include/app/: AppStateEditor.hpp  AppStateGameSetup.hpp  AppStateIngame.hpp  AppStateJoinGame.hpp  AppStateLobbyBase.hpp  AppStateMainMenu.hpp  AppStateMapRotationWrapper.hpp  AppStateMenuOptions.hpp  AppStatePaused.hpp  AppStatePeerLobby.hpp  AppStateScoreTable.hpp  AppStateServerWrapper.hpp  AppStateWinnerAnnounced.hpp  GuiBuilder.hpp  GuiState.hpp
src/lib-app/include/builder/: WidgetBuilder.hpp
src/lib-app/include/logging/: FileLogger.hpp  LoggerFactory.hpp  LoggerInterface.hpp  NullLogger.hpp
src/lib-app/include/settings/: GameTitle.hpp  GameTitle.hpp.in
src/lib-app/include/utils/: AppMessage.hpp  Base16.hpp  ClientStateToString.hpp  DemoFileHandler.hpp  DependencyContainer.hpp  FileLoader.hpp  Framerate.hpp  InputHandler.hpp  JoinGameDialog.hpp  ServerMapLoader.hpp  VirtualCursor.hpp  WinConditionStrategy.hpp
src/lib-app/src/: AppMessage.cpp  AppMessage.ixx  DependencyContainer.ixx
src/lib-app/src/app/: AppStateEditor.cpp  AppStateGameSetup.cpp  AppStateIngame.cpp  AppStateJoinGame.cpp  AppStateLobbyBase.cpp  AppStateMainMenu.cpp  AppStateMapRotationWrapper.cpp  AppStateMenuOptions.cpp  AppStatePaused.cpp  AppStatePeerLobby.cpp  AppStateScoreTable.cpp  AppStateServerWrapper.cpp  AppStateWinnerAnnounced.cpp  GuiBuilder.cpp  GuiState.cpp
src/lib-app/src/builder/: WidgetBuilder.cpp
src/lib-app/src/logging/: FileLogger.cpp  LoggerFactory.cpp
src/lib-app/src/utils/: AppMessage.cpp  DemoFileHandler.cpp  FileLoader.cpp  JoinGameDialog.cpp  ServerMapLoader.cpp  VirtualCursor.cpp  WinConditionStrategy.cpp
src/lib-audio/: CMakeLists.txt
src/lib-audio/include/: AudioPlayer.hpp  AudioPlayerInterface.hpp  Jukebox.hpp  Playlist.hpp
src/lib-audio/src/: Audio.ixx  AudioPlayer.cpp  AudioPlayer.ixx  Jukebox.cpp  Jukebox.ixx  Playlist.ixx
src/lib-editor/: CMakeLists.txt
src/lib-editor/include/: Camera.hpp  EditorState.hpp  Globals.hpp  Gui.hpp  JsonHelper.hpp  LogConsole.hpp  ProgramOptions.hpp
src/lib-editor/include/Commands/: CommandHelper.hpp  CommandHistory.hpp  CommandQueue.hpp  CreateDeleteObjectCommand.hpp  MoveObjectCommand.hpp  ResizeCommand.hpp  RestoreFromSnapshotCommand.hpp  SetObjectPropertyCommand.hpp  SetTileAreaCommand.hpp  SetTileCommand.hpp  SetTilePropertyCommand.hpp  ShrinkToFitCommand.hpp
src/lib-editor/include/Configs/: Strings.hpp
src/lib-editor/include/Dialogs/: DialogBase.hpp  DialogBuilderHelper.hpp  DialogInterface.hpp  EditMetadataDialog.hpp  EditPropertyDialog.hpp  ErrorInfoDialog.hpp  FormValidatorToken.hpp  LoadLevelDialog.hpp  LoadingDialog.hpp  MapPickerDialog.hpp  MetadataDialogBase.hpp  NewLevelDialog.hpp  PlaytestSettingsDialog.hpp  ResizeLevelDialog.hpp  SaveLevelDialog.hpp  UpdateConfigPathDialog.hpp  YesNoCancelDialog.hpp
src/lib-editor/include/Editor/: Editor.hpp  EditorState.hpp  EditorStateManager.hpp  NullEditor.hpp
src/lib-editor/include/Interfaces/: CommandInterface.hpp  CurrentLayerObserverInterface.hpp  DialogInterfaces.hpp  EditorInterface.hpp  FileApiInterface.hpp  PenUserInterface.hpp  PhysicalPenInterface.hpp  (+8 more)
src/lib-editor/src/: Camera.cpp  JsonHelper.cpp  LogConsole.cpp
src/lib-filesystem/: CMakeLists.txt
src/lib-filesystem/include/: Filesystem.hpp
src/lib-filesystem/src/: Filesystem.cpp
src/lib-game/: CMakeLists.txt  morrowind_retrospective.txt
src/lib-game/include/: GameLoop.hpp
src/lib-game/src/: GameLoop.cpp
src/lib-gui-builder/: CMakeLists.txt
src/lib-gui-builder/include/: ButtonListBuilder.hpp  FormBuilder.hpp  Gui.hpp  GuiBuilder.hpp  LayoutBuilder.hpp  TableBuilder.hpp  TguiHelper.hpp  WidgetBuilder.hpp
src/lib-gui-builder/src/: ButtonListBuilder.cpp  ButtonListBuilder.ixx  FormBuilder.cpp  FormBuilder.ixx  Gui.cpp  Gui.ixx  GuiBuilder.ixx  LayoutBuilder.cpp  LayoutBuilder.ixx  TableBuilder.cpp  TguiHelper.ixx  WidgetBuilder.cpp  WidgetBuilder.ixx
src/lib-input/: CMakeLists.txt
src/lib-input/include/: ControllerInterface.hpp  InputSchema.hpp  PhysicalController.hpp
src/lib-input/src/: ControllerInterface.ixx  Input.ixx  InputSchema.cpp  InputSchema.ixx  PhysicalController.cpp  PhysicalController.ixx
src/lib-misc/: CMakeLists.txt
src/lib-misc/include/: CoreTypes.hpp  Error.hpp  Literals.hpp  LoggerInterface.hpp  StdoutLogger.hpp
src/lib-misc/src/: CoreTypes.ixx  Error.ixx  Literals.ixx
src/lib-network/: CMakeLists.txt
src/lib-network/include/: Client.hpp  ClientData.hpp  ClientMessage.hpp  ClientMessageType.hpp  InputData.hpp  LobbySettings.hpp  MapDownloadRequest.hpp  MapDownloadResponse.hpp  NetworkTypes.hpp  Server.hpp  ServerDependencies.hpp  ServerEvents.hpp  ServerMessage.hpp  ServerMessageType.hpp
src/lib-network/src/: Client.cpp  Client.ixx  ClientData.ixx  ClientMessage.ixx  ClientMessageType.ixx  InputData.ixx  LobbySettings.ixx  MapData.ixx  Message.ixx  Network.ixx  NetworkTypes.ixx  Server.cpp  Server.ixx  ServerMessage.ixx  ServerMessageType.ixx
src/lib-resources/: CMakeLists.txt
src/lib-resources/include/: Filesystem.hpp  TexturePath.hpp
src/lib-resources/src/: Filesystem.cpp  Filesystem.ixx  TexturePath.ixx
src/tests/: CMakeLists.txt
src/tests/assets/: config.json  process.bat
src/tests/src/: AppStateEditor.cpp  AppStateLobbyBaseTest.cpp  AudioEngineTest.cpp  Base16Test.cpp  Box.cpp  CommandHelperTest.cpp  CommandHistoryTest.cpp  CoordConverter.cpp  CreateDeleteItemCommandTest.cpp  DemoFileHandlerTest.cpp  DistanceIndexTest.cpp  EditorStateManager.cpp  EditorTest.cpp  Example.cpp  GameLoopTests.cpp  LightmapBuilderTest.cpp  LoadLevelDialogTest.cpp  Main.cpp  NetworkTest.cpp  NewLevelDialogTest.cpp  PhysicalPen.cpp  ProcessCreator.cpp  RcTest.cpp  RollbackStorageTest.cpp  RoundRobinBufferTest.cpp  ShortcutCombo.cpp  ShortcutEngine.cpp  ToolItemTest.cpp  ToolMeshTest.cpp  UtilitiesTest.cpp
(+345 files in other folders)
